--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-lib-cov
 *.seed
 *.log
 *.csv
@@ -6,9 +5,11 @@ lib-cov
 *.out
 *.pid
 *.gz
+*.swp
 
 pids
 logs
 results
+node_modules
 
 npm-debug.log
