delete passport related code

--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "mongoose": "*",
     "underscore": "*",
     "underscore.string": "*",
-    "connect": "*",
-    "passport": "*",
-    "passport-qq": "*"
+    "connect": "*"
   }
 }
