--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "underscore.string": "*",
     "connect": "*",
     "passport": "*",
-    "passport-qq": "*"
+    "passport-oauth": "*"
   }
 }
