refactor page.show by using async

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "underscore.string": "*",
     "connect": "*",
     "passport": "*",
-    "passport-oauth": "*"
+    "passport-oauth": "*",
+    "async": "*"
   }
 }
